<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Alloha @person!</string>
    <string name="app_name">CoLibra</string>
    <string name="label_email">E-mail</string>
    <string name="lable_full_name">Full Name</string>
    <string name="welcome">Welcome!</string>
    <string name="new_reader">New reader</string>
    <string name="sign_in">Sign in</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_btn_submit">Sign In</string>
    <string name="book_title_label">Title of the book</string>
    <string name="author_name_label">Author name</string>
    <string name="publish_year_label">Published in</string>
    <string name="technology_label">Technology</string>
    <string name="reserve">Reserve</string>
    <string name="menu_label_view_mode">View mode</string>
    <string name="menu_label_exit">Exit</string>
    <string name="menu_label_to_cabinet">My cabinet</string>
    <string name="label_books_view_mode">Books View mode</string>
    <string name="title_select_view_mode">Select view mode</string>
</resources>
